--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,3 +48,15 @@ button{
   cursor: pointer;
   margin: 5px;
 }
+.mailmsg{
+  color:green;
+  display: flex;
+  font-size:30px;
+  align-items: center;
+  justify-content: center;
+
+}
+.mailmsg h1{
+  color:blue;
+  font-size:30px;
+}
